--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
             <!-- Template Show -->
             <div class="content">
-				      <div class="show">
+				<div class="show">
                     <div class="header">
                         Molecular PSD Template, Gecodet
                         <span class="date">27.09.2014</span>
@@ -33,6 +33,7 @@
                       <center><a href="pages/Molecular/"><img src="img/molecular.png" width="500" height="400" alt=""/></a></center> 
                   </div>
                 </div>
+            </div>
             <div id="footer">
                 Copyright 2014 by Scripting4You, Design by Florian Gerhardt
             </div>
